--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -16,7 +16,8 @@
   margin: 30px 0;
 }
 
-.input-box input {
+.input-box input,
+.input-box .dropdown {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -28,17 +29,21 @@
   padding: 20px 45px 20px 20px;
 }
 
+
+
 .input-box input::placeholder {
-  color: #CCCCCC;
+    color: #cccccc;
 }
 
 .input-box label {
   position: absolute;
   top: -10px; /* ajustez cette valeur selon vos besoins pour la distance entre le label et l'input */
   left: 50px;
-  color: #1F7794;
+  color: #1f7794;
   background-color: white; /* pour cacher la bordure supérieure */
   padding: 0 5px;
   font-size: 15px;
   font-weight: 700;
 }
+
+  
