--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -17,7 +17,7 @@
 }
 
 .input-box input,
-.input-box .dropdown {
+.input-box .select {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -29,11 +29,28 @@
   padding: 20px 45px 20px 20px;
 }
 
+.input-box .select {
+    padding: 0px 45px 0px 20px;
+    cursor: pointer;
+    color: #cccccc;
 
+}
+
+
+
+
+/*
+.input-box .select:after {
+    content: "\25BC"; 
+     position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
 
 .input-box input::placeholder {
     color: #cccccc;
-}
+}*/
 
 .input-box label {
   position: absolute;
