new updates about the list

--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -111,6 +111,12 @@
     background: #2a2d35;
 }
 
+.menu li.disabled {
+    color: #ccc; /* Change color to indicate disabled state */
+    pointer-events: none; /* Disable pointer events */
+  }
+  
+
 .active {
     background: #23242a;
 }
