--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -91,7 +91,7 @@
     color: #9fa5B5;
     position: absolute;
     top: 4em;
-    /*left: 50%;*/
+    left: 50%;
     width: 100%;
     transform: translateX(-50%);
     opacity: 0;
