--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -21,7 +21,8 @@
   width: 100%;
   height: 100%;
   background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  /*border: 2px solid rgba(255, 255, 255, 0.2);*/
+  border:2px solid #BCBCBC;
   outline: none;
   border-radius: 40px;
   font-size: 16px;
