--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -90,7 +90,7 @@
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-top: 6px solid #fff;
+  border-top: 6px solid #545454;
   transition: 0.3s;
 }
 
@@ -120,8 +120,7 @@
 }
 
 .menu li {
-  padding: 0.7em 0.5em;
-  margin: 0.3em 0;
+  padding: 0.2em 0.5em;
   border-radius: 0.5em;
   cursor: pointer;
 }
