fixed the background of the menu

--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -101,7 +101,7 @@
 .menu {
   list-style: none;
   padding: 0.2em 0.5em;
-  background: transparent;
+  background: #fff;
   border:2px solid #BCBCBC;
   /*box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);*/
   border-radius: 0.5em;
