--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -8,7 +8,18 @@
   color: #fff;
   border-radius: 10px;
   padding: 80px 40px;
-  }
+}
+
+.wrapper h1 {
+  color: #1f7794;
+  font-size: 20px;
+  text-align: center;
+  position: absolute;
+  top: 45px;
+  left: 49%; 
+  transform: translateX(-50%); 
+  
+}
 
 .wrapper .input-box {
   position: relative;
@@ -22,7 +33,7 @@
   height: 100%;
   background: transparent;
   /*border: 2px solid rgba(255, 255, 255, 0.2);*/
-  border:2px solid #BCBCBC;
+  border: 2px solid #bcbcbc;
   outline: none;
   border-radius: 40px;
   font-size: 16px;
@@ -32,9 +43,8 @@
 }
 
 .input-box input::placeholder {
-    color: #cccccc;
-    font-weight: 400;
-
+  color: #cccccc;
+  font-weight: 400;
 }
 
 .input-box label {
@@ -70,11 +80,11 @@
 
   width: 100%;
   height: 100%;
-  border:2px solid #BCBCBC;
+  border: 2px solid #bcbcbc;
   outline: none;
   border-radius: 40px;
   font-size: 16px;
-  color: #CCCCCC;
+  color: #cccccc;
 
   padding: 10px 55px 10px 25px;
 }
@@ -83,7 +93,6 @@
   border: 2px #26489a solid;
   box-shadow: 0 0 0.8 #26489a;
 }
-
 
 .caret {
   width: 0;
@@ -102,7 +111,7 @@
   list-style: none;
   padding: 0.2em 0.5em;
   background: #fff;
-  border:2px solid #BCBCBC;
+  border: 2px solid #bcbcbc;
   /*box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);*/
   border-radius: 0.5em;
   border-radius: 20px;
@@ -126,7 +135,7 @@
 }
 
 .menu li:hover {
-  background: #1C7895;
+  background: #1c7895;
   color: #fff;
 }
 
@@ -155,46 +164,44 @@
 */
 
 .wrapper button {
-    width: 60%;
-    height: 45px;
-    background: #1C7895;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #fff;
-    font-weight: 500;
-    position: absolute; /* Change to absolute positioning */
-    left: 49%; /* Move the button to the center horizontally */
-    transform: translateX(-50%); /* Adjust for half of the button's width */
-    bottom: 70px; /* Adjust the distance from the bottom */
-
+  width: 60%;
+  height: 45px;
+  background: #1c7895;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  position: absolute; /* Change to absolute positioning */
+  left: 49%; /* Move the button to the center horizontally */
+  transform: translateX(-50%); /* Adjust for half of the button's width */
+  bottom: 70px; /* Adjust the distance from the bottom */
 }
 
 .wrapper .login-link {
-    font-size: 11px;
-    text-align: center;
-    margin: 20px 0 15px;
-    font-weight: 500;
-    position: absolute;
-    bottom: 30px; /* Adjust the distance from the bottom */
-    left: 47%; /* Move the button to the center horizontally */
-    transform: translateX(-50%); /* Adjust for half of the button's width */
+  font-size: 11px;
+  text-align: center;
+  margin: 20px 0 15px;
+  font-weight: 500;
+  position: absolute;
+  bottom: 30px; /* Adjust the distance from the bottom */
+  left: 47%; /* Move the button to the center horizontally */
+  transform: translateX(-50%); /* Adjust for half of the button's width */
 }
 
-.login-link p a{
-    color: #1C7895;
-    text-decoration: underline;
-    font-weight: 700;
+.login-link p a {
+  color: #1c7895;
+  text-decoration: underline;
+  font-weight: 700;
 }
 
 .login-link p {
-    color: #C4C4C4;
-
+  color: #c4c4c4;
 }
 
 .login-link p a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
