styled the new inputs

--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -16,9 +16,8 @@
   text-align: center;
   position: absolute;
   top: 45px;
-  left: 49%; 
-  transform: translateX(-50%); 
-  
+  left: 49%;
+  transform: translateX(-50%);
 }
 
 .wrapper .input-box {
@@ -55,6 +54,20 @@
   padding: 0 5px;
   font-size: 15px;
   font-weight: 700;
+}
+
+.input-box {
+  display: flex;
+}
+
+.input-half {
+  width: 50%;
+  margin-right: 10px;
+}
+
+.input-half label {
+  display: block;
+  margin-bottom: 5px;
 }
 
 .dropdown {
