--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,5 +1,4 @@
 .sign-in-container{
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,21 +14,21 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
-input{
+.form-inputs input{
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #BCBCBC;
-    border-radius: 5px;
+    border-radius: 10px;
     transition: border-color 0.3s,box-shadow 0.3s;
     
  }
- button{
+.sign-in-container button {
     width: 100%;
     padding: 10px;
     margin-top: 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     background-color: #1F7794;
     color: #fff;
     cursor: pointer;
