--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,11 +1,11 @@
-.sign-in-container{
+.sign-in-container,.forgot-password-container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-.sign-in-form{    
+.sign-in-form,.forgot-password-form{    
     width: 400px;
     padding: 20px;
     border: 1px solid #ccc;
@@ -23,7 +23,8 @@
     transition: border-color 0.3s,box-shadow 0.3s;
     
  }
-.sign-in-container button {
+ 
+.sign-in-container button,.reset-pwd {
     width: 100%;
     padding: 10px;
     margin-top: 20px;
@@ -35,12 +36,18 @@
     transition: background-color 0.3s;
  }
 
- button:hover{
+ .sign-in-container button,.reset-pwd:hover{
     background-color: #476D73;
     transform: scale(1.05);
  }
  label{
     font-size: 1.2rem;
+    margin-bottom: 10px;
+    color:#1F7794;
+ }
+ .forgot-password-form h2{
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+    text-align: center;
     margin-bottom: 10px;
     color:#1F7794;
  }
