--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,66 +1,74 @@
-.sign-in-container,.forgot-password-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.sign-in-container,
+.forgot-password-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.sign-in-form,.forgot-password-form{    
-    width: 400px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.sign-in-form,
+.forgot-password-form {
+  width: 400px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.form-inputs input{
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #BCBCBC;
-    border-radius: 10px;
-    transition: border-color 0.3s,box-shadow 0.3s;
-    
- }
- 
-.sign-in-container button,.reset-pwd {
-    width: 100%;
-    padding: 10px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 25px;
-    background-color: #1F7794;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
- }
+.form-inputs input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #BCBCBC;
+  border-radius: 10px;
+  transition: border-color 0.3s, box-shadow 0.3s;
 
- .sign-in-container button,.reset-pwd:hover{
-    background-color: #476D73;
-    transform: scale(1.05);
- }
- label{
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    color:#1F7794;
- }
- .forgot-password-form h2{
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
-    text-align: center;
-    margin-bottom: 10px;
-    color:#1F7794;
- }
+}
+
+.sign-in-container button,
+.reset-pwd {
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 25px;
+  background-color: #1F7794;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.sign-in-container button,
+.reset-pwd:hover {
+  background-color: #476D73;
+  transform: scale(1.05);
+}
+
+label {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #1F7794;
+}
+
+.forgot-password-form h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+  text-align: center;
+  margin-bottom: 10px;
+  color: #1F7794;
+}
 
 #create-account {
-    color: #C4C4C4;
-  }
-  #create-account-link,#forgot-password-link{
-    color: #476D73;
-    text-decoration: none;
-  }
-  input::placeholder {
-    color: #CCCCCC;
-  }
-  
+  color: #C4C4C4;
+}
 
+#create-account-link,
+#forgot-password-link,
+#sign-in-link {
+  color: #476D73;
+  text-decoration: none;
+}
+
+input::placeholder {
+  color: #CCCCCC;
+}
