--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -1,6 +1,8 @@
 .wrapper {
   width: 440px;
-  height: 620px;
+  height: auto;
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
   background: white;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
@@ -8,6 +10,47 @@
   color: #fff;
   border-radius: 10px;
   padding: 80px 40px;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center; /* Ajustez l'alignement du texte */
+}
+
+.wrapper button {
+  width: 60%;
+  height: 45px;
+  background: #1c7895;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  margin-top: 20px; /* Ajustez la marge supérieure */
+  margin-bottom: 20px; /* Ajustez la marge inférieure */
+}
+
+.wrapper .login-link {
+  font-size: 11px;
+  text-align: center;
+  font-weight: 500;
+  position: relative; /* Modifier la position en relative */
+  margin-top: 0px; /* Ajouter une marge supérieure */
+}
+
+
+
+.login-link p a {
+  color: #1c7895;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+.login-link p {
+  color: #c4c4c4;
 }
 
 .wrapper h1 {
@@ -165,44 +208,7 @@
   opacity: 1;
 }
 
-.wrapper button {
-  width: 60%;
-  height: 45px;
-  background: #1c7895;
-  border: none;
-  outline: none;
-  border-radius: 40px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  font-size: 16px;
-  color: #fff;
-  font-weight: 500;
-  position: absolute; /* Change to absolute positioning */
-  left: 49%; /* Move the button to the center horizontally */
-  transform: translateX(-50%); /* Adjust for half of the button's width */
-  bottom: 70px; /* Adjust the distance from the bottom */
-}
 
-.wrapper .login-link {
-  font-size: 11px;
-  text-align: center;
-  margin: 20px 0 15px;
-  font-weight: 500;
-  position: absolute;
-  bottom: 30px; /* Adjust the distance from the bottom */
-  left: 47%; /* Move the button to the center horizontally */
-  transform: translateX(-50%); /* Adjust for half of the button's width */
-}
-
-.login-link p a {
-  color: #1c7895;
-  text-decoration: underline;
-  font-weight: 700;
-}
-
-.login-link p {
-  color: #c4c4c4;
-}
 
 .login-link p a:hover {
   text-decoration: underline;
