implemented the email verification logic

--- a/Frontend/src/pages/signup/SignupPage.css
+++ b/Frontend/src/pages/signup/SignupPage.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-body {
+.signup-page {
   font-family: 'Poppins', sans-serif;
   font-synthesis: none;
   -webkit-font-smoothing: antialiased;
