--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -17,7 +17,7 @@
   text-align: center; /* Ajustez l'alignement du texte */
 }
 
-.wrapper button {
+.wrapper button[type="submit"] {
   width: 60%;
   height: 45px;
   background: #1c7895;
@@ -31,6 +31,12 @@
   font-weight: 500;
   margin-top: 20px; /* Ajustez la marge supérieure */
   margin-bottom: 20px; /* Ajustez la marge inférieure */
+}
+
+/* Style for disabled submit button */
+button[type="submit"]:disabled {
+  background-color: #478da3;;
+  cursor: not-allowed;
 }
 
 .wrapper .login-link {
