--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,4 +1,4 @@
-
+/* 
 .sign-in-container,
 .forgot-password-container {
   display: flex;
@@ -75,4 +75,215 @@ label {
 
 input::placeholder {
   color: #CCCCCC;
+} */
+
+
+.wrapper {
+  width: 440px;
+  height: 620px;
+  background: white;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(30px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  border-radius: 10px;
+  padding: 80px 40px;
+}
+
+.wrapper h1 {
+  color: #1f7794;
+  font-size: 20px;
+  text-align: center;
+  position: absolute;
+  top: 45px;
+  left: 49%;
+  transform: translateX(-50%);
+}
+
+.wrapper .input-box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: 2px solid #bcbcbc;
+  outline: none;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #7b7b7b;
+  padding: 20px 45px 20px 20px;
+  font-weight: 700;
+}
+
+.input-box input::placeholder {
+  color: #cccccc;
+  font-weight: 400;
+}
+
+.input-box label {
+  position: absolute;
+  top: -10px; /* ajustez cette valeur selon vos besoins pour la distance entre le label et l'input */
+  left: 45px;
+  color: #1f7794;
+  background-color: white; /* pour cacher la bordure supérieure */
+  padding: 0 5px;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.input-box {
+  display: flex;
+  justify-content: space-between; /* Pour espacer les deux inputs */
+}
+
+.input-half {
+  width: 48%;
+  position: relative; /* Pour positionner le label par rapport à cet élément */
+}
+
+.input-half label {
+    position: absolute; /* Position absolue pour le label */
+}
+
+.dropdown {
+  min-width: 15em;
+  position: relative;
+  margin: 2em;
+}
+
+.dropdown * {
+  box-sizing: border-box;
+}
+
+.select {
+  background: transparent;
+
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  transition: background 0.3s;
+
+  width: 100%;
+  height: 100%;
+  border: 2px solid #bcbcbc;
+  outline: none;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #cccccc;
+
+  padding: 10px 55px 10px 25px;
+}
+
+.select-clicked {
+  border: 2px #26489a solid;
+  box-shadow: 0 0 0.8 #26489a;
+}
+
+.caret {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid #545454;
+  transition: 0.3s;
+}
+
+.caret-rotate {
+  transform: rotate(180deg);
+}
+
+.menu {
+  list-style: none;
+  padding: 0.2em 0.5em;
+  background: #fff;
+  border: 2px solid #bcbcbc;
+  /*box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);*/
+  border-radius: 0.5em;
+  border-radius: 20px;
+
+  color: #9fa5b5;
+  position: absolute;
+  top: 3.2em;
+  left: 50%;
+  width: 100%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+}
+
+.menu li {
+  padding: 0.2em 0.5em;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+
+.menu li:hover {
+  background: #1c7895;
+  color: #fff;
+}
+
+.menu li.disabled {
+  color: #ccc; /* Change color to indicate disabled state */
+  pointer-events: none; /* Disable pointer events */
+}
+
+.active {
+  background: #23242a;
+}
+
+.menu-open {
+  display: block;
+  opacity: 1;
+}
+
+.wrapper button {
+  width: 60%;
+  height: 45px;
+  background: #1c7895;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  position: absolute; /* Change to absolute positioning */
+  left: 49%; /* Move the button to the center horizontally */
+  transform: translateX(-50%); /* Adjust for half of the button's width */
+  bottom: 70px; /* Adjust the distance from the bottom */
+}
+
+.wrapper .login-link {
+  font-size: 11px;
+  text-align: center;
+  margin: 20px 0 15px;
+  font-weight: 500;
+  position: absolute;
+  bottom: 30px; /* Adjust the distance from the bottom */
+  left: 47%; /* Move the button to the center horizontally */
+  transform: translateX(-50%); /* Adjust for half of the button's width */
+}
+
+.login-link p a {
+  color: #1c7895;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+.login-link p {
+  color: #c4c4c4;
+}
+
+.login-link p a:hover {
+  text-decoration: underline;
 }
