--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -77,17 +77,46 @@ input::placeholder {
   color: #CCCCCC;
 } */
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-synthesis: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  /*background:orange;*/
+  background: url(../../assets/audito.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
 .wrapper {
   width: 440px;
-  height: 620px;
+  height: 70vh;
   background: white;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   border-radius: 10px;
-  padding: 80px 40px;
+  padding: 40px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper h1 {
@@ -118,6 +147,7 @@ input::placeholder {
   color: #7b7b7b;
   padding: 20px 45px 20px 20px;
   font-weight: 700;
+  
 }
 
 .input-box input::placeholder {
@@ -141,109 +171,6 @@ input::placeholder {
   justify-content: space-between; /* Pour espacer les deux inputs */
 }
 
-.input-half {
-  width: 48%;
-  position: relative; /* Pour positionner le label par rapport à cet élément */
-}
-
-.input-half label {
-    position: absolute; /* Position absolue pour le label */
-}
-
-.dropdown {
-  min-width: 15em;
-  position: relative;
-  margin: 2em;
-}
-
-.dropdown * {
-  box-sizing: border-box;
-}
-
-.select {
-  background: transparent;
-
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  transition: background 0.3s;
-
-  width: 100%;
-  height: 100%;
-  border: 2px solid #bcbcbc;
-  outline: none;
-  border-radius: 40px;
-  font-size: 16px;
-  color: #cccccc;
-
-  padding: 10px 55px 10px 25px;
-}
-
-.select-clicked {
-  border: 2px #26489a solid;
-  box-shadow: 0 0 0.8 #26489a;
-}
-
-.caret {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 6px solid #545454;
-  transition: 0.3s;
-}
-
-.caret-rotate {
-  transform: rotate(180deg);
-}
-
-.menu {
-  list-style: none;
-  padding: 0.2em 0.5em;
-  background: #fff;
-  border: 2px solid #bcbcbc;
-  /*box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);*/
-  border-radius: 0.5em;
-  border-radius: 20px;
-
-  color: #9fa5b5;
-  position: absolute;
-  top: 3.2em;
-  left: 50%;
-  width: 100%;
-  transform: translateX(-50%);
-  opacity: 0;
-  display: none;
-  transition: 0.2s;
-  z-index: 1;
-}
-
-.menu li {
-  padding: 0.2em 0.5em;
-  border-radius: 0.5em;
-  cursor: pointer;
-}
-
-.menu li:hover {
-  background: #1c7895;
-  color: #fff;
-}
-
-.menu li.disabled {
-  color: #ccc; /* Change color to indicate disabled state */
-  pointer-events: none; /* Disable pointer events */
-}
-
-.active {
-  background: #23242a;
-}
-
-.menu-open {
-  display: block;
-  opacity: 1;
-}
 
 .wrapper button {
   width: 60%;
@@ -263,21 +190,28 @@ input::placeholder {
   bottom: 70px; /* Adjust the distance from the bottom */
 }
 
+.wrapper button:hover {
+  background-color: #476D73;
+}
+
 .wrapper .login-link {
   font-size: 11px;
   text-align: center;
   margin: 20px 0 15px;
   font-weight: 500;
   position: absolute;
-  bottom: 30px; /* Adjust the distance from the bottom */
+  bottom: 5px; /* Adjust the distance from the bottom */
   left: 47%; /* Move the button to the center horizontally */
   transform: translateX(-50%); /* Adjust for half of the button's width */
 }
 
 .login-link p a {
   color: #1c7895;
-  text-decoration: underline;
+  text-decoration: none;
   font-weight: 700;
+  white-space: nowrap;
+
+
 }
 
 .login-link p {
@@ -286,4 +220,10 @@ input::placeholder {
 
 .login-link p a:hover {
   text-decoration: underline;
+}
+
+#forgot-password-link {
+  color: #1c7895;
+  text-decoration: none;
+  font-weight: 700;
 }
