--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -79,7 +79,7 @@ input::placeholder {
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -95,45 +95,37 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  /*background:orange;*/
   background: url(../../assets/audito.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
 .wrapper {
-  width: 440px;
-  height: 70vh;
+  width: 100%;
+  /* max-width: 440px; */
   background: white;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   border-radius: 10px;
-  padding: 40px 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 40px;
+  display: grid;
+  grid-gap: 20px;
+  justify-items: center;
 }
 
 .wrapper h1 {
   color: #1f7794;
   font-size: 20px;
   text-align: center;
-  position: absolute;
-  top: 45px;
-  left: 49%;
-  transform: translateX(-50%);
 }
 
-.wrapper .input-box {
-  position: relative;
+.input-box {
   width: 100%;
-  height: 50px;
-  margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .input-box input {
@@ -150,80 +142,60 @@ code {
   
 }
 
-.input-box input::placeholder {
-  color: #cccccc;
-  font-weight: 400;
-}
-
 .input-box label {
-  position: absolute;
-  top: -10px; /* ajustez cette valeur selon vos besoins pour la distance entre le label et l'input */
-  left: 45px;
   color: #1f7794;
-  background-color: white; /* pour cacher la bordure supérieure */
-  padding: 0 5px;
   font-size: 15px;
   font-weight: 700;
+  margin-bottom: 5px;
 }
-
-.input-box {
-  display: flex;
-  justify-content: space-between; /* Pour espacer les deux inputs */
-}
-
 
 .wrapper button {
-  width: 60%;
+  width:100%; /* Adjusted width */
   height: 45px;
   background: #1c7895;
   border: none;
   outline: none;
-  border-radius: 40px;
+  border-radius: 25px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   font-size: 16px;
   color: #fff;
   font-weight: 500;
-  position: absolute; /* Change to absolute positioning */
-  left: 49%; /* Move the button to the center horizontally */
-  transform: translateX(-50%); /* Adjust for half of the button's width */
-  bottom: 70px; /* Adjust the distance from the bottom */
+  margin-top: 5px;
+  margin-bottom: 20px; /* Added margin-bottom */
 }
 
 .wrapper button:hover {
-  background-color: #476D73;
+  background-color: #476d73;
 }
 
-.wrapper .login-link {
+.login-link {
   font-size: 11px;
   text-align: center;
-  margin: 20px 0 15px;
-  font-weight: 500;
-  position: absolute;
-  bottom: 5px; /* Adjust the distance from the bottom */
-  left: 47%; /* Move the button to the center horizontally */
-  transform: translateX(-50%); /* Adjust for half of the button's width */
+  margin-top: 20px;
 }
 
-.login-link p a {
+.login-link p a ,.reset-pwd a,#forgot-password-link{
   color: #1c7895;
   text-decoration: none;
   font-weight: 700;
-  white-space: nowrap;
-
-
 }
 
 .login-link p {
   color: #c4c4c4;
 }
 
-.login-link p a:hover {
+
+.reset-pwd a:hover,.login-link a:hover {
   text-decoration: underline;
 }
 
-#forgot-password-link {
-  color: #1c7895;
-  text-decoration: none;
-  font-weight: 700;
-}
+
+
+
+
+
+
+
+
+
