--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -102,7 +102,7 @@ body {
 
 .wrapper {
   width: 100%;
-  /* max-width: 440px; */
+
   background: white;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
@@ -162,7 +162,7 @@ body {
   color: #fff;
   font-weight: 500;
   margin-top: 5px;
-  margin-bottom: 20px; /* Added margin-bottom */
+  margin-bottom: 20px; 
 }
 
 .wrapper button:hover {
@@ -173,6 +173,11 @@ body {
   font-size: 11px;
   text-align: center;
   margin-top: 20px;
+}
+.forgot-password{
+  font-size: 11px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .login-link p a ,.reset-pwd a,#forgot-password-link{
@@ -186,7 +191,7 @@ body {
 }
 
 
-.reset-pwd a:hover,.login-link a:hover {
+.reset-pwd a:hover,.login-link a:hover ,#forgot-password-link:hover{
   text-decoration: underline;
 }
 
