--- a/Frontend/src/Components/Reserver/Reserver.css
+++ b/Frontend/src/Components/Reserver/Reserver.css
@@ -125,15 +125,19 @@ textarea {
 
   .quit-button {
     position: relative;
-    width:8%;
+    width:25px;
+    height: 25px;
     left: 370px;
     background-color: #B4B4B8;
+
     border: none;
     font-size: 10px;
     cursor: pointer;
     outline: none;
-    border-radius: 150%;
+    border-radius: 50%;
     padding: 5px; 
+ 
+
   }
   
   .quit-button:hover {
