--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,4 +1,4 @@
- .sign-in-container,
+.sign-in-container,
 .forgot-password-container {
   display: flex;
   justify-content: center;
@@ -26,11 +26,10 @@
   border: 1px solid #BCBCBC;
   border-radius: 10px;
   transition: border-color 0.3s, box-shadow 0.3s;
-
 }
 
 .sign-in-container button,
-.reset-pwd {
+.forgot-password-container button {
   width: 100%;
   padding: 10px;
   margin-top: 20px;
@@ -39,11 +38,11 @@
   background-color: #1F7794;
   color: #fff;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.3s;
 }
 
-.sign-in-container button,
-.reset-pwd:hover {
+.sign-in-container button:hover,
+.forgot-password-container button:hover {
   background-color: #476D73;
   transform: scale(1.05);
 }
@@ -74,4 +73,123 @@ label {
 
 input::placeholder {
   color: #CCCCCC;
-} 
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-synthesis: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(../../assets/audito.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.wrapper {
+  width: 100%;
+  background: white;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(30px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  border-radius: 10px;
+  padding: 40px;
+  display: grid;
+  grid-gap: 20px;
+  justify-items: center;
+}
+
+.wrapper h1 {
+  color: #1f7794;
+  font-size: 20px;
+  text-align: center;
+}
+
+.input-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: 2px solid #bcbcbc;
+  outline: none;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #7b7b7b;
+  padding: 20px 45px 20px 20px;
+  font-weight: 700;
+}
+
+.input-box label {
+  color: #1f7794;
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.wrapper button {
+  width: 100%;
+  height: 45px;
+  background: #1c7895;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.wrapper button:hover {
+  background-color: #476d73;
+}
+
+.login-link {
+  font-size: 11px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.forgot-password {
+  font-size: 11px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.login-link p a,
+.reset-pwd a,
+#forgot-password-link {
+  color: #1c7895;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.login-link p {
+  color: #c4c4c4;
+}
+
+.reset-pwd a:hover,
+.login-link a:hover,
+#forgot-password-link:hover {
+  text-decoration: underline;
+}
