--- a/Frontend/src/components/signup/SignupFrom.css
+++ b/Frontend/src/components/signup/SignupFrom.css
@@ -34,12 +34,12 @@
   margin-bottom: 20px; /* Ajustez la marge inférieure */
 }
 
-/* Style for disabled submit button */
+/* Style for disabled submit button 
 button[type="submit"]:disabled {
   background-color: #478da3;;
   cursor: not-allowed;
 }
-
+*/
 .wrapper .login-link {
   font-size: 11px;
   text-align: center;
