fixed the delete club

--- a/Frontend/src/pages/signup/AdminTasks/UserFeatures/styles.css
+++ b/Frontend/src/pages/signup/AdminTasks/UserFeatures/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 .form-wrapper{
   top: 50px;
 }
@@ -44,3 +45,9 @@ button[type="submit"]:disabled {
 }
 
 
+.add-pres {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
