--- a/Frontend/src/Components/Navbar.css
+++ b/Frontend/src/Components/Navbar.css
@@ -7,12 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px; /* Ajoutez un padding aux extrémités du Navbar */
-  margin: 0; /* Supprime les marges pour éviter le débordement */
-  box-sizing: border-box; /* Inclut les paddings dans la largeur totale */
-  max-width: 100vw; /* Limite la largeur à la largeur de l'écran */
-  overflow-x: hidden; /* Empêche le défilement horizontal */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ajoute une ombre légère */
+  padding: 0 20px; 
+  margin: 0; 
+  box-sizing: border-box; 
+  max-width: 100vw;
+  overflow-x: hidden; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 
 }
 
@@ -30,32 +30,19 @@
 .notifications {
   background-color: #525252;
   ;
-  /* couleur de fond du cercle */
-  border-radius: 50%; /* arrondir pour créer un cercle */
+
+  border-radius: 50%;
   width: 30px !important;
   height: 30px !important;
-  display: flex; /* pour centrer l'icône à l'intérieur du cercle */
-  justify-content: center; /* centrer horizontalement */
-  align-items: center; /* centrer verticalement */
-  cursor: pointer;
-  padding: 5px; /* Ajoute un padding à l'intérieur du cercle */
- 
- 
-
-}
-/*.navicons {
   display: flex; 
-  flex-direction: row;
-  justify-content: flex-end;
-
-
+  justify-content: center; 
   align-items: center;
-  
-  
+  cursor: pointer;
+  padding: 5px; 
+ 
 
-  
 }
-*/
+
 .navicons {
   display: flex;
   align-items: center;
