--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -35,7 +35,7 @@
   margin-top: 20px;
   border: none;
   border-radius: 25px;
-  background-color: #1F7794;
+  background-color: #630000;
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s;
@@ -43,14 +43,14 @@
 
 .sign-in-container button:hover,
 .forgot-password-container button:hover {
-  background-color: #476D73;
+  background-color: #f0f0f0;
   transform: scale(1.05);
 }
 
 label {
   font-size: 1.2rem;
   margin-bottom: 10px;
-  color: #1F7794;
+  color: BLACK;
 }
 
 .forgot-password-form h2 {
@@ -67,7 +67,7 @@ label {
 #create-account-link,
 #forgot-password-link,
 #sign-in-link {
-  color: #476D73;
+  color: #B4B4B8;
   text-decoration: none;
 }
 
@@ -105,14 +105,14 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   border-radius: 10px;
-  padding: 40px;
+  padding: 20px;
   display: grid;
   grid-gap: 20px;
   justify-items: center;
 }
 
 .wrapper h1 {
-  color: #1f7794;
+  color: black;
   font-size: 20px;
   text-align: center;
 }
@@ -126,7 +126,7 @@ body {
 
 .input-box input {
   width: 100%;
-  height: 100%;
+  height: 80%;
   background: transparent;
   border: 2px solid #bcbcbc;
   outline: none;
@@ -138,7 +138,7 @@ body {
 }
 
 .input-box label {
-  color: #1f7794;
+  color: black;
   font-size: 15px;
   font-weight: 700;
   margin-bottom: 5px;
@@ -147,7 +147,7 @@ body {
 .wrapper button {
   width: 100%;
   height: 45px;
-  background: #1c7895;
+  background-color: #630000;
   border: none;
   outline: none;
   border-radius: 25px;
@@ -161,7 +161,7 @@ body {
 }
 
 .wrapper button:hover {
-  background-color: #476d73;
+  background-color:  #f0f0f0;
 }
 
 .login-link {
@@ -174,6 +174,7 @@ body {
   font-size: 11px;
   margin-top: 5px;
   margin-bottom: 10px;
+  color : #B4B4B8;
 }
 
 .login-link p a,
