--- a/Frontend/src/Pages/CalendarPage/calendarStyle.css
+++ b/Frontend/src/Pages/CalendarPage/calendarStyle.css
@@ -20,9 +20,8 @@
 
 .reservation-btn {
 
-    background-color: #2966b4;
-    /* medium blue */
-    color: white;
+    background-color: #630000;
+    color: #fff;
     padding: 10px 20px;
     border: none;
     font-size: 16px;
@@ -36,8 +35,8 @@
 }
 
 .reservation-btn:hover {
-    background-color: #337ab7;
-    /* slightly darker blue on hover */
+    background-color: #f0f0f0;
+    color: black;
 }
 .rbc-events-container,.rbc-event-label,.rbc-event-content{
     width:100%;
@@ -56,3 +55,82 @@
     padding-left: 5px;
     margin-left: 5px;
 } */
+.custom-modal .modal-header {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-bottom: 2px solid #630000;
+    border-radius: 8px 8px 0 0;
+  }
+  
+  .custom-modal .modal-title {
+    color: black;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .custom-modal .modal-body {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .custom-modal .modal-detail {
+    margin-bottom: 15px;
+    color: black;
+    font-size: 14px; /* Increased font size */
+    font-family: 'Lato', sans-serif;
+  }
+  
+  .custom-modal .modal-detail-label {
+    display: inline-block;
+    width: 200px; 
+    color: black;
+    font-weight: bold;
+    text-align: left;
+    font-size: 18px; /* Larger font size for labels */
+    font-family: 'Lato', sans-serif;
+  }
+  
+  .custom-modal .modal-detail-value {
+    display: inline-block;
+    width: calc(100% - 200px);
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box;
+    background-color: #B4B4B8;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+    overflow: hidden; /* Prevent text overflow */
+  }
+  
+  .custom-modal .modal-footer {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-top: 2px solid #630000;
+    border-radius: 0 0 8px 8px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .custom-modal .button {
+    width: 40%;
+    height: auto;
+    padding: 7px 14px; /* Reduced padding for smaller button size */
+    background-color: #630000;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: block;
+    margin: 0 auto; 
+    font-size: 12px; /* Smaller font size */
+    font-family: 'Roboto', sans-serif; 
+    margin-top: 20px; /* Adjusted margin for spacing */
+  }
+  
+  .custom-modal .button:hover {
+    background-color: #f0f0f0;
+    color: black;
+  }
+  
